# template-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format_count.sh
inc/: kyden.h
src/: kyden.cc  main.cc
test/: CMakeLists.txt  template_cpp_test.cc
